<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PikPok</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="likes">likes</string>
    <string name="comments">comments</string>
    <string name="share">Share</string>
    <string name="camera">Camera</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="upload">Upload</string>
</resources>